更新资源文件内容 ->> colors.xml ->> string.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_activity_publish_settings">推流参数设置</string>
     <string name="touch_focus">手动对焦</string>
     <string name="definition">清晰度</string>
+    <string name="capturing_status">录屏直播未开始...</string>
+    <string name="capture_hint">温馨提示：录屏直播开始后，请点击home键退出当前界面，进行其他操作</string>
 </resources>
