--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
         否则您无权注册、登录、使用或以任何方式使用本《协议》所涉及的相关服务。您一旦注册、登录、使用或以任何方式使用本《协议》所涉及的的相关服务的行为将视为对本《协议》的接受，
         即表示您同意接受本《协议》中的条款的约束。如果您不同意本《协议》中的条款，请不要注册、登录或使用本《协议》相关服务。本《协议》是您（或称为“用户”）与高校直播应用提供商（下称“高校直播”）之间的法律协议。
     </string>
+    <string name="be_anchor">
+        <u>我想成为高校主播...</u>
+    </string>
 </resources>
