--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="be_anchor">
         <u>我想成为高校主播...</u>
     </string>
+
+    <string name="app_info_creater">created by kam_mf &amp; Mr_wang</string>
+
 </resources>
